--- a/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
+++ b/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
@@ -26,15 +26,8 @@
     d:DataContext="{toolbar:ToolbarViewModel}">
 
     <Grid>
-        <ToolBarTray>
-            <ToolBar x:Name="MainToolbar" Band="0">
-                <Button>File</Button>
-                <Separator/>
-                <Button>Edit</Button>
-                <Separator/>
-                <Button>View</Button>
-            </ToolBar>
-            <ToolBar x:Name="PicToolbar" Band="1" ItemsSource="{Binding ButtonsToShow}">
+        <ToolBarTray Background="White">
+            <ToolBar x:Name="PicToolbar" Band="0" ItemsSource="{Binding ButtonsToShow}">
                 <ToolBar.ItemTemplate>
                     <DataTemplate>
                         <Button Width="16" Height="16" Margin="3" ToolTip="{Binding Description}" Command="{Binding WinInputCommand}" IsEnabled="{Binding IsEnabled, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}">
