Current file name is now shown in window title. Also, simple saved/unsaved indication.

--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -26,7 +26,7 @@
     xmlns:modelExplorer="clr-namespace:WpfControlsLib.Controls.ModelExplorer;assembly=WpfControlsLib"
     xmlns:palette="clr-namespace:WpfControlsLib.Controls.Palette;assembly=WpfControlsLib"
     xmlns:toolbar="clr-namespace:WpfControlsLib.Controls.Toolbar;assembly=WpfControlsLib"
-    Title="REAL.NET"
+    Title="{Binding WindowTitle}"
     mc:Ignorable="d"
     Height="685" Width="936">
 
