--- a/src/Generator/Scenario.tt
+++ b/src/Generator/Scenario.tt
@@ -101,7 +101,7 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 	j++;
 } #>
 
-			var robot = new Model();
+			//var robot = new Model();
 			<# foreach (var x in modelNodes) { 
 				if (classOfElement(x.Name) == "Sensor") { 
 					var port = x.Attributes.Where(y => y.Name == "port").AsEnumerable();
@@ -109,8 +109,22 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 					{
 						string p = port.First().StringValue; #>
 			
-			var s<#= modelNodes.IndexOf(x) #> = robot.AnalogSensors[Trik.Sensor.A<#= p #>].ToObservable().DistinctUntilChanged();
-			s<#= modelNodes.IndexOf(x) #>.Subscribe(reactElement<#= modelNodes.IndexOf(x) #>);
+            SensorSim sensorSim<#= modelNodes.IndexOf(x) #> = new SensorSim(<#= p #>);
+			sensorSim<#= modelNodes.IndexOf(x) #>.Index = <#= modelNodes.IndexOf(x) #>;
+			//sensorSim<\#= modelNodes.IndexOf(x) \#>.Event += (sender, args) => 
+                //element<\#= modelNodes.IndexOf(x) \#>.Action(args);
+
+            IObservable<int> observableForSimulation<#= modelNodes.IndexOf(x) #> =
+						System.Reactive.Linq.Observable.FromEventPattern<int>(
+							h => sensorSim<#= modelNodes.IndexOf(x) #>.Event += h,
+							h => sensorSim<#= modelNodes.IndexOf(x) #>.Event -= h)
+							.Select(e => e.EventArgs)
+							.Synchronize().DistinctUntilChanged();
+
+            observableForSimulation<#= modelNodes.IndexOf(x) #>.Subscribe(reactElement<#= modelNodes.IndexOf(x) #>);
+
+			//var s\<#= modelNodes.IndexOf(x) \#> = robot.AnalogSensors[Trik.Sensor.A\<#= p \#>].ToObservable().DistinctUntilChanged();
+			//s\<#= modelNodes.IndexOf(x) \#>.Subscribe(reactElement\<#= modelNodes.IndexOf(x) \#>);
 					<#}
 				}
 				if (classOfElement(x.Name) == "Actuator") { 
@@ -119,7 +133,10 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 					{
 						string p = port.First().StringValue; #>
 			
-			reactElement<#= modelNodes.IndexOf(x) #>.Subscribe(robot.Motors[Trik.Motor.M<#= p #>]);
+			IObserver<int> observerForSimulation<#= modelNodes.IndexOf(x) #> = Observer.Create<int>(x => Console.WriteLine("----- Actuator at port {0} -- {1}  -----", <#= p #>, x));
+			reactElement<#= modelNodes.IndexOf(x) #>.Subscribe(observerForSimulation<#= modelNodes.IndexOf(x) #>);
+            
+            //reactElement\<#= modelNodes.IndexOf(x) \#>.Subscribe(robot.Motors[Trik.Motor.M\<#= p \#>]);
 					<#}
 				}
 			}#>
@@ -132,12 +149,17 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 		private static void RobotSimulator()
         {
 			<# foreach (var x in modelNodes) { 
-				if (classOfElement(x.Name) == "Sensor") { #>
+				if (classOfElement(x.Name) == "Sensor") { 
+                    var port = x.Attributes.Where(y => y.Name == "port").AsEnumerable();
+					    if (port.Any())
+					    {
+						    string p = port.First().StringValue; #>
 
-			SensorSim sensorSim<#= modelNodes.IndexOf(x) #> = new SensorSim();
+			SensorSim sensorSim<#= modelNodes.IndexOf(x) #> = new SensorSim(<#= p #>);
 			sensorSim<#= modelNodes.IndexOf(x) #>.Index = <#= modelNodes.IndexOf(x) #>;
-			sensorSim<#= modelNodes.IndexOf(x) #>.NewSensorValue += (sender, args) => element<#= modelNodes.IndexOf(x) #>.Action(args.SensorValue);
-
+			sensorSim<#= modelNodes.IndexOf(x) #>.Event += (sender, args) => 
+                element<#= modelNodes.IndexOf(x) #>.Action(args);
+                        <#}#>
 				<#}
 			}#>
 
