--- a/src/WpfEditor/View/Templates/GeneralTemplate.xaml
+++ b/src/WpfEditor/View/Templates/GeneralTemplate.xaml
@@ -16,7 +16,110 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:xx="clr-namespace:WpfControlsLib.Controls.Scene;assembly=WpfControlsLib"
     xmlns:controls="http://schemas.panthernet.ru/graphx/">
+
+    <Style x:Shared="False" TargetType="xx:VertexConnectionPoint">
+
+        <Setter Property="Shape" Value="Circle" />
+
+        <Setter Property="Content">
+            <Setter.Value>
+                <Path Width="10"
+                      Height="10"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Data="M 38,0.791664C 58.5496,0.791664 75.2083,17.4504 75.2083,38C 75.2083,58.5496 58.5496,75.2083 38,75.2083C 17.4504,75.2083 0.791662,58.5496 0.791662,38C 0.791662,17.4504 17.4504,0.791664 38,0.791664 Z M 38,5.54166C 20.0738,5.54166 5.54167,20.0738 5.54167,38C 5.54167,55.9262 20.0738,70.4583 38,70.4583C 55.9262,70.4583 70.4583,55.9262 70.4583,38C 70.4583,20.0738 55.9262,5.54166 38,5.54166 Z "
+                      Stretch="Uniform"
+                      Stroke="Black"
+                      StrokeThickness="1" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <ControlTemplate x:Key="OperationVertexGH" TargetType="{x:Type xx:VertexControlWithVCP}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Name="Target_vcproot" Grid.Column="0">
+                <Border Margin="3,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="1" IsOccupied="False" IsSource="False"/>
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="40" Stretch="UniformToFill"/>
+                <!--controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" /-->
+            </StackPanel>
+            <StackPanel Name="Source_vcproot" Grid.Column="2">
+                <Border Margin="-1,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="2" IsOccupied="False" IsSource="True"/>
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="SensorVertexGH" TargetType="{x:Type xx:VertexControlWithVCP}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <!--controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" /-->
+            </StackPanel>
+            <StackPanel Name="Source_vcproot" Grid.Column="1">
+                <Border Margin="-1,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="1" IsOccupied="False" IsSource="True"/>
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="ActuatorVertexGH" TargetType="{x:Type xx:VertexControlWithVCP}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Name="Target_vcproot" Grid.Column="0">
+                <Border Margin="0,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="1" IsOccupied="False" IsSource="False"/>
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <!--controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" /-->
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="IntervalVertexGH" TargetType="{x:Type xx:VertexControlWithVCP}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Name="Target_vcproot" Grid.Column="0">
+                <Border Margin="0,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="1" IsOccupied="False" IsSource="False"/>
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <!--controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" /-->
+            </StackPanel>
+            <StackPanel Name="Source_vcproot" Grid.Column="2">
+                <Border Margin="-1,4,0,0" Padding="0">
+                    <xx:VertexConnectionPoint Id="2" IsOccupied="False" IsSource="True"/>
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
@@ -42,6 +145,60 @@
         <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
         <Setter Property="controls:DragBehaviour.UpdateEdgesOnMove" Value="True" />
     </Style>
+
+    <Style TargetType="{x:Type xx:VertexControlWithVCP}">
+        <Setter Property="Background" Value="{Binding Color}"/>
+        <Setter Property="VertexShape" Value="None"/>
+        <Setter Property= "ShowLabel" Value="True"/>
+        <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
+        <Setter Property="controls:DragBehaviour.UpdateEdgesOnMove" Value="True" />
+
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding VertexType}" Value="Attribute">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type xx:VertexControlWithVCP}">
+                            <Border Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        CornerRadius="0,0,0,0"
+                                        Padding="{TemplateBinding Padding}">
+                                <Grid>
+                                    <ContentPresenter Content="{TemplateBinding Vertex}" />
+                                    <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Vertex, RelativeSource={RelativeSource TemplatedParent}}" />
+                                </Grid>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Background" Value="LightCoral" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aAndOperation">
+                <Setter Property="Template" Value="{StaticResource OperationVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aOrOperation">
+                <Setter Property="Template" Value="{StaticResource OperationVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aOpenWindow">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aCloseWindow">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aPourSoil">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aAirTemperature">
+                <Setter Property="Template" Value="{StaticResource SensorVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aSoilTemperature">
+                <Setter Property="Template" Value="{StaticResource SensorVertexGH}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aInterval">
+                <Setter Property="Template" Value="{StaticResource IntervalVertexGH}"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
 
     <ControlTemplate x:Key="GeneralizationEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
