--- a/src/plugins/GoogleDrivePlugin/Controls/LogoutControls/LogoutBox.xaml
+++ b/src/plugins/GoogleDrivePlugin/Controls/LogoutControls/LogoutBox.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="GoogleDrivePlugin.Controls.LogoutBox.LogoutBox"
+﻿<UserControl x:Class="GoogleDrivePlugin.Controls.LogoutControls.LogoutBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GoogleDrivePlugin.Controls.LogoutBox"
+             xmlns:local="clr-namespace:GoogleDrivePlugin.Controls.LogoutControls"
              mc:Ignorable="d">
     <Border BorderThickness="1">
         <Border.BorderBrush>
@@ -21,9 +21,9 @@
 
             <Label Grid.Column="0" Grid.Row="0" Margin="2" Padding="0,1,0,0" Content="Username:" FontSize="14" 
                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center"/>
-            <Label Grid.Column="0" Grid.Row="1" Margin="2" Padding="0,0,0,1" Content="TST_ibalashov24" FontSize="18" 
+            <Label Grid.Column="0" Grid.Row="1" Margin="2" Padding="0,0,0,1" x:Name="UsernameLabel" Content="TST_ibalashov24" FontSize="18" 
                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Top"/>
-            <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" Content="Log Out" FontSize="18" 
+            <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" x:Name="LogoutButton" Content="Log Out" FontSize="18" 
                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
     </Border>
