--- a/src/plugins/GoogleDrivePlugin/View/Forms/ImportDialog.xaml
+++ b/src/plugins/GoogleDrivePlugin/View/Forms/ImportDialog.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class = "GoogleDrivePlugin.View.ImportDialog"
+﻿<Window
+    xmlns:view="clr-namespace:GoogleDrivePlugin.View" x:Class = "GoogleDrivePlugin.View.ImportDialog"
     xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:logoutbox="clr-namespace:GoogleDrivePlugin.Controls.LogoutBox"
+    xmlns:logoutbox="clr-namespace:GoogleDrivePlugin.Controls.LogoutControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
     Title = "Import Model From Google Drive" MinWidth="530" MinHeight="400">
 
@@ -23,8 +24,8 @@
         <Rectangle Grid.Column="0" Grid.Row="1" Margin="3" Grid.ColumnSpan="3" 
                    Fill="#FFF4F4F5" Stroke="Black" VerticalAlignment="Stretch" />
 
-        <Button Grid.Column="2" Grid.Row="2" Margin="3" Content="Open" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <logoutbox:LogoutBox Grid.Column="1" Grid.Row="2" Margin="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <Button Grid.Column="0" Grid.Row="2" Margin="2" Content="Cancel" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="2" Grid.Row="2" Margin="3" x:Name="OpenButton" Content="Open" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <logoutbox:LogoutBox Grid.Column="1" Grid.Row="2" Margin="3" x:Name="LogoutBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="0" Grid.Row="2" Margin="2" x:Name="CancelButton" Content="Cancel" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </Window>
