--- a/src/plugins/GoogleDrivePlugin/Controls/FileExplorer/FileExplorer.xaml
+++ b/src/plugins/GoogleDrivePlugin/Controls/FileExplorer/FileExplorer.xaml
@@ -4,10 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GoogleDrivePlugin.Controls.FileExplorer"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d">
     <Grid>
-        <Button Content="TEST&#xD;&#xA;" HorizontalAlignment="Left" Margin="256,161,0,0" VerticalAlignment="Top" Width="282" Height="127"/>
-
+        <ListView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                  Margin="0" ScrollViewer.CanContentScroll="True">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn x:Name="NameColumn" Width="100">
+                        <GridViewColumnHeader>Name</GridViewColumnHeader>
+                    </GridViewColumn>
+                    <GridViewColumn x:Name="SizeColumn" Width="100">
+                        <GridViewColumnHeader>Size</GridViewColumnHeader>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </UserControl>
