--- a/src/plugins/GoogleDrivePlugin/Controls/LogoutControls/LogoutBox.xaml
+++ b/src/plugins/GoogleDrivePlugin/Controls/LogoutControls/LogoutBox.xaml
@@ -15,15 +15,15 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="3*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" Margin="2" Padding="0,1,0,0" Content="Username:" FontSize="14" 
+            <Label Grid.Column="0" Grid.Row="0" Margin="2" Padding="0,1,0,0" Content="Username:"  
                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center"/>
-            <Label Grid.Column="0" Grid.Row="1" Margin="2" Padding="0,0,0,1" x:Name="UsernameLabel" Content="TST_ibalashov24" FontSize="18" 
+            <Label Grid.Column="0" Grid.Row="1" Margin="2" Padding="0,0,0,1" x:Name="UsernameLabel" Content="TST_ibalashov24"  
                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Top"/>
-            <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" x:Name="LogoutButton" Content="Log Out" FontSize="18" 
+            <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" x:Name="LogoutButton" Content="Log Out"  
                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
     </Border>
