--- a/src/plugins/GoogleDrivePlugin/View/Forms/ExportDialog.xaml
+++ b/src/plugins/GoogleDrivePlugin/View/Forms/ExportDialog.xaml
@@ -3,8 +3,9 @@
     xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:logoutbox="clr-namespace:GoogleDrivePlugin.Controls.LogoutControls"
+    xmlns:fileexplorer="clr-namespace:GoogleDrivePlugin.Controls.FileExplorer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-    Title = "Export Model To Google Drive" MinWidth="530" MinHeight="400">
+    Title = "Export Model To Google Drive" MinWidth="530" MinHeight="400" Width="530" Height="400">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -21,16 +22,16 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Column="1" Grid.Row="0" Content="Select File To Save Into:" Grid.ColumnSpan="2" Margin="3" Padding="0"
-               FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Bottom" />
+                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Bottom" />
 
-        <Button Grid.Column="0" Grid.Row="2" Margin="3" x:Name="NewFolderButton" Content="New Folder" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <Button Grid.Column="0" Grid.Row="1" Margin="3" x:Name="NewFileButton" Content="New File" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="0" Grid.Row="2" Margin="3" x:Name="NewFolderButton" Content="New Folder"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="0" Grid.Row="1" Margin="3" x:Name="NewFileButton" Content="New File"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 
-        <Rectangle Grid.Column="1" Grid.Row="1" Margin="3" Grid.RowSpan="3" Grid.ColumnSpan="2" 
-                   Fill="#FFF4F4F5" Stroke="Black" VerticalAlignment="Stretch" />
+        <fileexplorer:FileExplorer Grid.Column="1" Grid.Row="1" Margin="3" x:Name="FileExplorer" Grid.RowSpan="3" Grid.ColumnSpan="2" 
+               HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 
-        <Button Grid.Column="2" Grid.Row="4" Margin="3" x:Name="SaveButton" Content="Save" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="2" Grid.Row="4" Margin="3" x:Name="SaveButton" Content="Save"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         <logoutbox:LogoutBox Grid.Column="1" Grid.Row="4" Margin="3" x:Name="LogoutBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <Button Grid.Column="0" Grid.Row="4" Margin="2" x:Name ="CancelButton" Content="Cancel" FontSize="18" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Button Grid.Column="0" Grid.Row="4" Margin="2" x:Name ="CancelButton" Content="Cancel"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </Window>
