--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -38,7 +38,7 @@
         <CommandBinding Command="Close" CanExecute="OnCanExecuteForAlwaysExecutable" Executed="OnQuitExecuted" />
     </Window.CommandBindings>
 
-    <Grid ShowGridLines="True">
+    <Grid>
         <Grid.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
@@ -71,13 +71,13 @@
         </Menu>
 
         <!-- Area and console -->
-        <Grid Grid.Row="1" Grid.Column="0" ShowGridLines="True">
+        <Grid Grid.Row="1" Grid.Column="0">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="65*"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto" MinHeight="50"/>
+                <RowDefinition Height="15*" MinHeight="50"/>
             </Grid.RowDefinitions>
 
             <!-- Toolbar -->
@@ -99,7 +99,7 @@
 
         <!-- RightPanel -->
         <DockPanel Grid.Row="1" Grid.Column="2">
-            <Grid x:Name="rightPanel" ShowGridLines="True">
+            <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" MinHeight="70"/>
@@ -143,7 +143,16 @@
                                                         <Setter Property="ContentTemplate">
                                                             <Setter.Value>
                                                                 <DataTemplate>
-                                                                    <TextBox Text="{Binding DataContext.Value, RelativeSource={RelativeSource AncestorType=DataGridCell}}"/>
+                                                                    <TextBox>
+                                                                        <TextBox.Text>
+                                                                            <Binding>
+                                                                                <Binding.Path>DataContext.Value</Binding.Path>
+                                                                                <Binding.RelativeSource>
+                                                                                    <RelativeSource AncestorType="DataGridCell"/>
+                                                                                </Binding.RelativeSource>       
+                                                                            </Binding>
+                                                                            </TextBox.Text>
+                                                                    </TextBox>
                                                                 </DataTemplate>
                                                             </Setter.Value>
                                                         </Setter>
