--- a/src/plugins/ConstraintsPlugin/Views/Controls/ConstraintsPalette.xaml
+++ b/src/plugins/ConstraintsPlugin/Views/Controls/ConstraintsPalette.xaml
@@ -14,22 +14,22 @@
 * limitations under the License. -->
 
 <UserControl
-    x:Class="ConstraintsPlugin.ConstraintsPanel"
+    x:Class="ConstraintsPlugin.ConstraintsPalette"
     xmlns:constraintsColumn="using:ConstraintsPlugin"
     xmlns:scene="clr-namespace:WpfControlsLib.Controls.Scene;assembly=WpfControlsLib"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:palette="clr-namespace:WpfControlsLib.Controls.Palette;assembly=WpfControlsLib"
     mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height = "90" />
+            <RowDefinition Height = "*" />
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="constraintsName" Text ="{Binding Path=ConstraintsName}"/>
+        <palette:Palette x:Name="palette" Visibility="Visible"/>
 
-        
     </Grid>
 </UserControl>
