--- a/src/WpfControlsLib/Controls/Console/AppConsole.xaml
+++ b/src/WpfControlsLib/Controls/Console/AppConsole.xaml
@@ -35,8 +35,8 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" Width="Auto" Grid.Column="0"/>
-                    <Button x:Name="button1" Width="60" Height="30" Content="Нажать" Grid.Column="1"/>
+                    <TextBox x:Name="oclBox" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" Width="Auto" Grid.Column="0" Text="{Binding Ocl,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button x:Name="button1" Width="60" Height="30" Content="Нажать" Grid.Column="1" Click="button1_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
