--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -1,6 +1,5 @@
 ﻿<!-- 
 * Copyright 2017-2018 REAL.NET group
-
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
@@ -37,7 +36,7 @@
         <CommandBinding Command="SaveAs" CanExecute="OnCanExecuteForAlwaysExecutable" Executed="OnSaveAsExecuted" />
         <CommandBinding Command="Close" CanExecute="OnCanExecuteForAlwaysExecutable" Executed="OnQuitExecuted" />
     </Window.CommandBindings>
-    
+
     <Grid>
         <Grid.Resources>
             <ResourceDictionary>
@@ -72,7 +71,7 @@
 
         <!-- LeftPanel -->
         <Grid
-            x:Name="constraintsGrid"
+            x:Name="leftPanelGrid"
             Grid.Row="1"
             Grid.Column="0"
             HorizontalAlignment="Left"/>
@@ -96,7 +95,7 @@
                 <scene:Scene  x:Name="scene"/>
             </Grid>
 
-                    <!-- GridSplitter for console -->
+            <!-- GridSplitter for console -->
             <GridSplitter Grid.Row ="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="5"/>
 
             <!-- Console with error messages -->
