--- a/src/WpfEditor/View/Templates/GeneralTemplate.xaml
+++ b/src/WpfEditor/View/Templates/GeneralTemplate.xaml
@@ -27,11 +27,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:VertexControl}">
                     <Grid>
+                        <Border BorderThickness="4"
+                            BorderBrush="{Binding BorderColor}"
+                            CornerRadius="14">
                         <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill">
-                            <Image.Effect>
+                            <!--<Image.Effect>
                                 <DropShadowEffect Color="{Binding ShadowColor}"></DropShadowEffect>
-                            </Image.Effect>
+                            </Image.Effect>-->
                         </Image>
+                        </Border>
                         <controls:VertexLabelControl 
                             x:Name="PART_vertexLabel" 
                             Content="{Binding Name}" 
